fix triageresult controller
